update : update method thinking for trading function
